# VestaDisputeAgent

./: .gitignore  main.py  pyproject.toml  readme.txt  streamlit_style.py
agents/: chatbot.py  pdf_dispute_agent.py  smart_contract_agent.py  text_reader_dispute_agent.py
css/: landing_page_styling.py  pages_styling.py
utils/: load_llm_api.py
